[package]
name = "advent_of_code"
version = "0.9.5"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[features]
test_lib = []
dhat-heap = ["dhat"]

[dependencies]
anyhow = "1.0.75"
cached = "0.46.1"
counter = "0.5.7"
dhat = { version = "0.3.2", optional = true }
indicatif = {version = "0.17.7", features = ["rayon"]}
itertools = "0.12.0"
grid = "0.12.0"
num-integer = "0.1.45"
pico-args = "0.5.0"
rayon = "1.8"
regex = "1.10.2"
thiserror = "1.0.50"

[profile.dhat]
inherits = "release"
debug = 1
